--- a/pages/about/team.html
+++ b/pages/about/team.html
@@ -92,6 +92,10 @@
       object-fit: cover;
       border: 4px solid #9240e4;
       box-shadow: 0 10px 40px rgba(146, 64, 228, 0.4);
+      image-rendering: -webkit-optimize-contrast;
+      image-rendering: crisp-edges;
+      backface-visibility: hidden;
+      transform: translateZ(0);
     }
 
     /* Placeholder for when no image exists */
@@ -156,6 +160,10 @@
       margin: 0 auto 1.5rem;
       object-fit: cover;
       border: 3px solid #9240e4;
+      image-rendering: -webkit-optimize-contrast;
+      image-rendering: crisp-edges;
+      backface-visibility: hidden;
+      transform: translateZ(0);
     }
 
     .team-headshot-placeholder {
@@ -313,7 +321,7 @@
               nation-state adversaries in high-stakes operational environments. His technical expertise encompasses
               network security architecture, penetration testing, security monitoring (SIEM), and compliance frameworks
               including NIST 800-53, DoD RMF, and CMMC.
-              <br>
+              <br><br>
               After witnessing the stark digital divide between well-resourced institutions and underserved communities,
               Tony founded CyberSmrt as a 501(c)(3) nonprofit with a clear mission: make enterprise-grade cybersecurity
               education and protection accessible to those who need it most. He recognized that low-income schools,
@@ -321,7 +329,7 @@
               lack the resources to defend themselves effectively. This inequity drove him to create programs that bridge
               the gap through hands-on K-12 curriculum, affordable managed security services (MSSP Lite), and workforce
               development pathways for adults from underserved backgrounds.
-              <br>
+              <br><br>
               Tony's approach combines technical rigor with educational equity, ensuring that students and organizations
               receive the same caliber of training and protection that he provided in defense environments—adapted for
               resource-constrained settings. He holds industry-recognized certifications including CISSP and CEH, and
@@ -355,13 +363,13 @@
               proven track record of securing mission-critical systems in federal, defense, and intelligence environments.
               His technical expertise spans threat intelligence, incident response, SIEM/IDS/IPS platforms, vulnerability management,
               and cloud security architecture across AWS, Azure, and Google Cloud.
-              <br>
+              <br><br>
               In addition to his operational leadership, Dr. Heinen has made a significant impact in academia, serving as an adjunct
               professor at multiple universities. He has designed and taught more than 40 advanced courses in cybersecurity,
               digital forensics, and cyber operations, blending hands-on labs with industry frameworks such as NIST, MITRE ATT&CK,
               and RMF. His instructional approach has prepared hundreds of students for certifications and successful careers in
               the cybersecurity field.
-              <br>
+              <br><br>
               Passionate about bridging the gap between academic theory and real-world practice, Dr. Heinen is committed to
               developing the next generation of cybersecurity professionals with the technical proficiency and strategic
               insight needed to excel in an evolving threat landscape.
@@ -392,7 +400,7 @@
               partnerships that drive mission-critical outcomes. Her nonprofit development experience includes administering
               multi-million dollar federal grants with zero audit findings and providing consulting services to community
               organizations, designing specialized training programs and managing complex partnership agreements.
-              <br>
+              <br><br>
               As a former business owner/broker of a mortgage company, Melissa brings valuable private sector perspective
               to nonprofit leadership, understanding both revenue generation and operational sustainability. She holds a
               Master's degree in Family & Human Development from Arizona State University with advanced certifications in
@@ -401,7 +409,7 @@
               institutions while maintaining exceptional compliance records across diverse, multicultural environments. Melissa is
               passionate about building sustainable funding strategies that advance organizational missions and create lasting
               community impact.
-            </p>
+            </p><br>
             <div class="team-badges">
               <span class="badge">Mother</span>
               <span class="badge">CDO</span>
