--- a/pages/about/team.html
+++ b/pages/about/team.html
@@ -309,7 +309,7 @@
 
       <div class="leadership-card">
         <div class="leadership-content">
-          <img src="/assets/team/tony-rossi.jpg" alt="Tony Rossi" class="leader-headshot">
+          <img src="/assets/team/tony-rossi.png" alt="Tony Rossi" class="leader-headshot">
 
           <div class="leader-info">
             <h3>Tony Rossi</h3>
@@ -430,7 +430,7 @@
 
       <div class="team-grid">
         <div class="team-card">
-        <img src="/assets/team/emma-pennington.jpg" alt="Lead Developer" class="team-headshot">
+        <img src="/assets/team/emma-pennington.png" alt="Lead Developer" class="team-headshot">
 
           <h3 class="team-name">Lead Developer</h3>
           <p class="team-title">Engineering</p>
