--- a/pages/about/team.html
+++ b/pages/about/team.html
@@ -271,6 +271,46 @@
         grid-template-columns: 1fr;
       }
     }
+    .leader-headshot,
+    .team-headshot {
+      image-rendering: -webkit-optimize-contrast;
+      image-rendering: crisp-edges;
+      backface-visibility: hidden;
+      -webkit-font-smoothing: antialiased;
+      transform: translateZ(0);
+    }
+
+    /* Leadership headshots */
+    .leader-headshot {
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      object-fit: cover;
+      object-position: center;
+      border: 4px solid #9240e4;
+      box-shadow: 0 10px 40px rgba(146, 64, 228, 0.4);
+      display: block;
+    }
+
+    /* Team headshots */
+    .team-headshot {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      margin: 0 auto 1.5rem;
+      object-fit: cover;
+      object-position: center;
+      border: 3px solid #9240e4;
+      display: block;
+    }
+
+    /* Prevent blurry scaling */
+    @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+      .leader-headshot,
+      .team-headshot {
+        image-rendering: -webkit-optimize-contrast;
+      }
+    }
   </style>
 </head>
 <body>
