--- a/pages/about/team.html
+++ b/pages/about/team.html
@@ -471,7 +471,7 @@
       <div class="team-grid">
         <div class="team-card">
         <img src="/assets/team/emma-pennington.png" alt="Lead Developer" class="team-headshot">
-
+          <h3 class="team-name">Emma Pennington</h3>
           <h3 class="team-name">Lead Developer</h3>
           <p class="team-title">Engineering</p>
           <p class="team-bio">
@@ -487,7 +487,7 @@
         <div class="team-card">
           <!-- Replace with actual headshot: <img src="/assets/team/curriculum-director.jpg" alt="Curriculum Director" class="team-headshot"> -->
           <div class="team-headshot-placeholder">🎓</div>
-
+          <h3 class="team-name">Jane Doe</h3>
           <h3 class="team-name">Curriculum Director</h3>
           <p class="team-title">K-12 Education Programs</p>
           <p class="team-bio">
@@ -503,7 +503,7 @@
         <div class="team-card">
           <!-- Replace with actual headshot: <img src="/assets/team/workforce-lead.jpg" alt="Workforce Development Lead" class="team-headshot"> -->
           <div class="team-headshot-placeholder">💼</div>
-
+          <h3 class="team-name">Jane Doe</h3>
           <h3 class="team-name">Workforce Development Lead</h3>
           <p class="team-title">Adult Training Programs</p>
           <p class="team-bio">
