--- a/pages/about/team.html
+++ b/pages/about/team.html
@@ -472,7 +472,7 @@
         <div class="team-card">
         <img src="/assets/team/emma-pennington.png" alt="Lead Developer" class="team-headshot">
           <h3 class="team-name">Emma Pennington</h3>
-          <h3 class="team-name">Lead Developer</h3>
+          <h4 class="team-role">Lead Developer</h3>
           <p class="team-title">Engineering</p>
           <p class="team-bio">
             Leading our managed security service offerings for nonprofits and small businesses,
@@ -488,7 +488,7 @@
           <!-- Replace with actual headshot: <img src="/assets/team/curriculum-director.jpg" alt="Curriculum Director" class="team-headshot"> -->
           <div class="team-headshot-placeholder">🎓</div>
           <h3 class="team-name">Jane Doe</h3>
-          <h3 class="team-name">Curriculum Director</h3>
+          <h4 class="team-role">Curriculum Director</h3>
           <p class="team-title">K-12 Education Programs</p>
           <p class="team-bio">
             Developing age-appropriate, hands-on cybersecurity curriculum for grades 5-12
@@ -504,7 +504,7 @@
           <!-- Replace with actual headshot: <img src="/assets/team/workforce-lead.jpg" alt="Workforce Development Lead" class="team-headshot"> -->
           <div class="team-headshot-placeholder">💼</div>
           <h3 class="team-name">Jane Doe</h3>
-          <h3 class="team-name">Workforce Development Lead</h3>
+          <h3 class="team-role">Workforce Development Lead</h3>
           <p class="team-title">Adult Training Programs</p>
           <p class="team-bio">
             Creating career pathways for underserved adults to enter high-paying cybersecurity roles
