--- a/index.html
+++ b/index.html
@@ -419,6 +419,39 @@
   -webkit-text-fill-color: transparent;
   color: transparent;             /* add for consistency */
 }
+/* Hero section mobile optimization */
+@media (max-width: 768px) {
+  .hero-content {
+    padding: 2rem 1rem;
+    text-align: center;
+  }
+
+  .hero-logo {
+    max-width: 200px;
+    margin: 0 auto 1.5rem;
+  }
+
+  .hero-title {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
+
+  .hero-subtitle {
+    font-size: 0.9rem;
+    line-height: 1.5;
+  }
+
+  .hero-buttons {
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+  }
+
+  .hero-buttons .btn {
+    width: 100%;
+    max-width: 300px;
+  }
+}
   </style>
 </head>
 
