--- a/index.html
+++ b/index.html
@@ -1100,127 +1100,11 @@
   <script defer src="/assets/js/footer-loader.js"></script>
 <script defer src="/assets/js/footer-init.js"></script>
 
-  <!-- Three.js library -->
-  <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
-  
-  <!-- Globe.gl library -->
-  <script src="https://unpkg.com/globe.gl@2.31.0/dist/globe.gl.min.js"></script>
-  
-  <!-- Globe initialization -->
-  <script>
-  (function() {
-    'use strict';
+<!-- Three.js and Globe.gl are loaded by the module via ESM, so we don't need them here -->
 
-    function initGlobe() {
-      // Check if libraries loaded
-      if (typeof THREE === 'undefined' || typeof Globe === 'undefined') {
-        console.log('Waiting for libraries...');
-        setTimeout(initGlobe, 100);
-        return;
-      }
+<!-- Your globe module (the one that's already working) -->
+<script type="module" src="/assets/js/globe-hero.js?v=5"></script>
 
-      const container = document.getElementById('globe-hero');
-      if (!container) {
-        console.error('Globe container not found');
-        return;
-      }
-
-      console.log('Initializing globe...');
-
-      // Initialize
-      const globe = Globe()(container)
-        .globeImageUrl('https://unpkg.com/three-globe@2.30.0/example/img/earth-blue-marble.jpg')
-        .bumpImageUrl('https://unpkg.com/three-globe@2.30.0/example/img/earth-topology.png')
-        .backgroundImageUrl('https://unpkg.com/three-globe/example/img/night-sky.png')
-        .backgroundColor('rgba(0,0,0,0)')
-        .width(container.offsetWidth)
-        .height(container.offsetHeight)
-        .pointOfView({ lat: 20, lng: -60, altitude: 2.5 });
-
-      // Rotate
-      let rotation = 0;
-      setInterval(() => {
-        rotation += 0.2;
-        globe.pointOfView({ lng: rotation });
-      }, 50);
-
-      // Attacks
-      const attacks = [
-        { lat: 40.7128, lng: -74.0060, name: 'New York' },
-        { lat: 51.5074, lng: -0.1278, name: 'London' },
-        { lat: 35.6762, lng: 139.6503, name: 'Tokyo' },
-        { lat: -33.8688, lng: 151.2093, name: 'Sydney' },
-        { lat: 28.6139, lng: 77.2090, name: 'Delhi' },
-        { lat: 55.7558, lng: 37.6173, name: 'Moscow' },
-        { lat: -23.5505, lng: -46.6333, name: 'São Paulo' },
-        { lat: 1.3521, lng: 103.8198, name: 'Singapore' },
-      ];
-
-      // Arcs
-      const arcs = [];
-      for (let i = 0; i < 20; i++) {
-        const start = attacks[Math.floor(Math.random() * attacks.length)];
-        const end = attacks[Math.floor(Math.random() * attacks.length)];
-        if (start !== end) {
-          arcs.push({
-            startLat: start.lat, startLng: start.lng,
-            endLat: end.lat, endLng: end.lng,
-            color: ['#ff3333', '#ff6666', '#ff9999'][Math.floor(Math.random() * 3)]
-          });
-        }
-      }
-
-      globe.arcsData(arcs).arcColor('color').arcDashLength(0.4)
-        .arcDashGap(0.2).arcDashAnimateTime(2000).arcStroke(0.5);
-
-      globe.pointsData(attacks).pointAltitude(0.01).pointRadius(0.3)
-        .pointColor(() => '#ff3333').pointLabel('name');
-
-      // Resize
-      window.addEventListener('resize', () => {
-        if (container.offsetWidth > 0) {
-          globe.width(container.offsetWidth).height(container.offsetHeight);
-        }
-      });
-
-      // Ticker
-      function updateTicker() {
-        const ticker = document.getElementById('attack-ticker');
-        if (!ticker) return;
-
-        const types = ['Nonprofit', 'School', 'Small Business', 'Underserved'];
-        const badges = ['badge-np', 'badge-sch', 'badge-smb', 'badge-uv'];
-        const cities = ['New York', 'London', 'Tokyo', 'Sydney', 'Delhi'];
-
-        const item = document.createElement('div');
-        item.className = 'attack-item';
-        item.innerHTML = `
-          <div class="attack-item__line">Blocked attack → ${cities[Math.floor(Math.random() * cities.length)]}</div>
-          <div class="attack-item__meta">${new Date().toLocaleTimeString('en-US', { hour: '2-digit', minute: '2-digit' })}</div>
-          <div class="attack-badge ${badges[Math.floor(Math.random() * badges.length)]}">${types[Math.floor(Math.random() * types.length)]}</div>
-        `;
-        ticker.insertBefore(item, ticker.firstChild);
-        while (ticker.children.length > 8) ticker.removeChild(ticker.lastChild);
-
-        const count = ticker.children.length;
-        const countEl = document.getElementById('attack-count');
-        const todayEl = document.getElementById('attack-today');
-        if (countEl) countEl.textContent = `${count} active`;
-        if (todayEl) todayEl.textContent = `Today: ${Math.floor(Math.random() * 50) + 20}`;
-      }
-
-      updateTicker();
-      setInterval(updateTicker, 3000);
-      console.log('✅ Globe ready');
-    }
-
-    if (document.readyState === 'loading') {
-      document.addEventListener('DOMContentLoaded', initGlobe);
-    } else {
-      initGlobe();
-    }
-  })();
-  </script>
 
   <!-- Footer -->
   <div id="footer-mount"></div>
