Add Cloudflare Turnstile to all pages

--- a/pages/about/team.html
+++ b/pages/about/team.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Cloudflare Turnstile API -->
+  <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
+
+  <!-- Turnstile Gate Loader -->
+  <script src="/assets/js/turnstile-gate-loader.js"></script>
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Our Team • CyberSmrt</title>
@@ -504,7 +510,7 @@
           <!-- Replace with actual headshot: <img src="/assets/team/workforce-lead.jpg" alt="Workforce Development Lead" class="team-headshot"> -->
           <div class="team-headshot-placeholder">💼</div>
           <h3 class="team-name">Jane Doe</h3>
-          <h3 class="team-role">Workforce Development Lead</h3>
+          <h4 class="team-role">Workforce Development Lead</h3>
           <p class="team-title">Adult Training Programs</p>
           <p class="team-bio">
             Creating career pathways for underserved adults to enter high-paying cybersecurity roles
