--- a/index.html
+++ b/index.html
@@ -390,9 +390,7 @@
       color: transparent;             /* fallback + silences some linters */
     }
 
-    /* ============ RESPONSIVE ============ */
-
-/* Large screens */
+    /* Large screens */
 @media (min-width: 1440px) {
   .hero__grid { grid-template-columns: minmax(420px, 42%) minmax(0, 1fr); }
 }
@@ -402,21 +400,61 @@
   .hero__grid {
     grid-template-columns: 1fr;
     height: auto;
+    gap: 2rem;
+  }
+
+  /* Ensure hero sections stack properly */
+  .hero__left {
+    order: 1;
+    padding-bottom: 2rem;
+  }
+
+  .hero__right {
+    order: 2;
+    min-height: 400px;
+  }
+
+  /* Globe container sizing */
+  .globe-card {
+    height: 100%;
+    min-height: 400px;
+  }
+
+  .globe-wrap {
+    min-height: 400px;
   }
 
   .globe-viewport {
-    max-height: clamp(340px, 48vh, 560px);
+    max-height: 400px;
+    min-height: 400px;
+    width: 100%;
   }
 
-  /* Center ticker on tablets */
+  /* Globe canvas */
+  #globe-hero {
+    width: 100% !important;
+    height: 100% !important;
+  }
+
+  #globe-hero canvas {
+    width: 100% !important;
+    height: 100% !important;
+  }
+
+  /* Ticker positioning on tablets */
   .ticker-overlay {
-    width: min(80vw, 420px);
-    left: 50%;
+    position: relative;
+    width: 100%;
+    max-width: 100%;
+    top: auto;
     right: auto;
-    transform: translateX(-50%);
-    top: 10px;
+    left: auto;
+    transform: none;
+    margin-top: 1rem;
+    padding: 0 1rem;
   }
 
+  /* Navigation */
   .nav-toggle { display: block; }
   .nav-links {
     position: absolute; top: 100%; right: 0; left: 0;
@@ -427,11 +465,27 @@
   .nav-links.show { display: flex; }
 }
 
-/* Mobile phones - complete restructure */
+/* Mobile phones */
 @media (max-width: 768px) {
   .hero-content {
     padding: 2rem 1rem;
     text-align: center;
+  }
+
+  /* Force globe visibility */
+  .hero__right {
+    display: block !important;
+    visibility: visible !important;
+    opacity: 1 !important;
+    min-height: 400px;
+  }
+
+  .globe-card,
+  .globe-wrap,
+  .globe-viewport,
+  #globe-hero {
+    display: block !important;
+    visibility: visible !important;
   }
 
   /* Restructure globe card to stack */
@@ -442,14 +496,14 @@
   }
 
   .globe-wrap {
-    order: 1; /* Globe first */
+    order: 1;
     position: relative;
   }
 
-  /* Move ticker below and make it relative */
+  /* Ticker below globe */
   .ticker-overlay {
-    position: relative !important; /* Override absolute */
-    order: 2; /* Ticker second */
+    position: relative !important;
+    order: 2;
     top: auto !important;
     left: auto !important;
     right: auto !important;
@@ -460,34 +514,46 @@
     padding: 0 1rem;
   }
 
-  .hero-logo {
+  /* Hero content */
+  .logo-shield {
     max-width: 200px;
-    margin: 0 auto 1.5rem;
   }
 
-  .hero-title {
+  h1.logo {
     font-size: 2rem;
-    margin-bottom: 1rem;
   }
 
-  .hero-subtitle {
+  .tagline {
+    font-size: 1.2rem;
+  }
+
+  .subtitle {
     font-size: 0.9rem;
     line-height: 1.5;
   }
 
-  .hero-buttons {
+  .cta-buttons {
     flex-direction: column;
     gap: 1rem;
     width: 100%;
   }
 
-  .hero-buttons .btn {
+  .cta-buttons .btn {
     width: 100%;
     max-width: 300px;
   }
+
+  /* Turnstile */
+  .hero-turnstile {
+    max-width: 100%;
+  }
+
+  .hero-turnstile-box {
+    padding: 1.25rem;
+  }
 }
 
-/* Extra small screens - adjust ticker sizing */
+/* Extra small screens */
 @media (max-width: 600px) {
   .ticker-card {
     width: 100%;
@@ -530,7 +596,7 @@
   }
 }
 
-/* Very small screens - further simplification */
+/* Very small screens */
 @media (max-width: 480px) {
   .ticker-head {
     flex-direction: column;
@@ -543,7 +609,6 @@
     justify-content: flex-start;
   }
 
-  /* Optionally hide ticker on very small screens */
   .ticker-overlay {
     max-height: 180px;
   }
@@ -553,13 +618,14 @@
   }
 }
 
-/* Extremely small - hide ticker */
+/* Extremely small */
 @media (max-width: 380px) {
   .ticker-overlay {
     display: none;
   }
 }
-/* Hero Turnstile Styling */
+
+/* Hero Turnstile Styling (applies to all screen sizes) */
 .hero-turnstile {
   width: 100%;
   max-width: 400px;
@@ -591,16 +657,6 @@
 
 .hero-turnstile-box .cf-turnstile {
   margin: 0 auto;
-}
-
-@media (max-width: 768px) {
-  .hero-turnstile {
-    max-width: 100%;
-  }
-
-  .hero-turnstile-box {
-    padding: 1.25rem;
-  }
 }
 </style>
 </head>
@@ -1206,5 +1262,34 @@
   <div id="footer-mount"></div>
   <script defer src="/assets/js/footer-loader.js"></script>
   <script defer src="/assets/js/footer-init.js"></script>
+  <script>
+
+    // Debug: Check globe on mobile
+    (function() {
+      function checkGlobe() {
+        const container = document.getElementById('globe-hero');
+        const viewport = document.querySelector('.globe-viewport');
+        const canvas = container?.querySelector('canvas');
+
+        console.log('=== Globe Debug ===');
+        console.log('Container:', container);
+        console.log('Container dimensions:', container?.offsetWidth, 'x', container?.offsetHeight);
+        console.log('Viewport:', viewport);
+        console.log('Viewport dimensions:', viewport?.offsetWidth, 'x', viewport?.offsetHeight);
+        console.log('Canvas:', canvas);
+        console.log('Canvas dimensions:', canvas?.width, 'x', canvas?.height);
+        console.log('Window width:', window.innerWidth);
+        console.log('==================');
+      }
+
+      // Check after page load
+      setTimeout(checkGlobe, 2000);
+
+      // Check after orientation change
+      window.addEventListener('orientationchange', () => {
+        setTimeout(checkGlobe, 500);
+      });
+    })();
+    </script>
 </body>
 </html>
