--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
           </div>
         </div>
 
-        <div class="cta-buttons">
+        <div id="hero-cta-buttons" class="cta-buttons">
           <a href="mailto:tony@cybersmrt.org" class="btn btn-primary">Get Involved</a>
           <a href="#programs" class="btn btn-secondary">Our Programs</a>
         </div>
