--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
     .equity-stat strong { font-size: 3rem; color: #667eea; font-weight: 900; margin-bottom: 0.5rem; display: block; }
     .equity-stat span { font-size: 0.9rem; color: #b0b0b0; max-width: 200px; }
 
-    .stats { background: linear-gradient(135deg, #1e3a8a 0%, #3b82f6 100%); padding: 5rem 2rem; }
+    .stats { background: linear-gradient(135deg, #040e3b 0%, #9240e4 100%); }
 
     .stats-grid {
       display: grid;
@@ -374,7 +374,7 @@
     .stat-card {
       text-align: center;
       padding: 2rem;
-      background: rgba(255,255,255,0.1);
+      background: rgba(255, 255, 255, 0.1);
       border-radius: 20px;
       backdrop-filter: blur(10px);
       transition: transform 0.3s;
@@ -478,7 +478,7 @@
     .program-highlight { background: rgba(102,126,234,0.1); padding: 0.75rem; border-radius: 10px; font-size: 0.9rem; color: #a0a0a0; }
 
     .cta-section {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: linear-gradient(135deg, #040e3b 0%, #9240e4 100%);
       padding: 5rem 2rem;
       text-align: center;
     }
