--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
     .stat-card {
       text-align: center;
       padding: 2rem;
-      background: rgba(255, 255, 255, 0.1);
+      background: linear-gradient(135deg, #9240e4 0%, #040e3b 100%);
       border-radius: 20px;
       backdrop-filter: blur(10px);
       transition: transform 0.3s;
