--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="Content-Security-Policy" content="
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://esm.sh https://cdn.jsdelivr.net https://challenges.cloudflare.com https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com data:; img-src 'self' data: https:; connect-src 'self' https://esm.sh https://cdn.jsdelivr.net https://challenges.cloudflare.com https://fonts.googleapis.com https://fonts.gstatic.com; frame-src https://challenges.cloudflare.com; worker-src 'self' blob:;">
     default-src 'self';
     script-src 'self' 'unsafe-inline' https:;
     style-src 'self' 'unsafe-inline' https:;
